2024-04-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht, xyling-hooks.4ht, xyling.4ht):
	added support for the Xyling package.
	https://www.umsu.de/blog/2024/801#c2398

	* tex4ht-fonts-noncjk.tex (
	tex4ht.dir/texmf/tex4ht/ht-fonts/iso8859/1/xypic/xycirc.htf
	): added support for the xycirc font.
	https://www.umsu.de/blog/2024/801#c2398

2024-04-09  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html5.tex (html5.4ht): set backround and foreground colors
	in the dark mode.
	https://puszcza.gnu.org.ua/bugs/index.php?623

2024-04-07  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (index.4ht): |<TeX4ht copywrite|> to get version.

2024-04-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-minionpro.tex: added support for MinionPro fonts.
	Thanks to David Gleich.
	https://github.com/michal-h21/htfgen/issues/2

2024-03-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (index.4ht): fixed clash between Imakeidx and Index
	packages.
	https://tex.stackexchange.com/q/714247/2891

2024-03-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (fancyvrb.4ht): changed non-existent \glet command
	to \global\let
	https://github.com/michal-h21/make4ht/issues/141

2024-03-21  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): redefine \log and similar LaTeX
	functions to provide a correct formatting.

	* tex4ht-mathml.tex (mathml.4ht): added \a:mathml prefix to <mo>
	tags in function applications.

	* tex4ht-mathml.tex (mathml.4ht): use <mi> instead of <mtext> for
	math operators configured in \Configure{qopname}, to get a correct
	spacing in function application.

2024-03-10  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (multibib-hooks.4ht): version.

2024-03-08  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): fixed degree celsius with Siunitx.
	
	* tex4ht-mathml.tex (mathml.4ht): require math mode in Mhchem
	sup-sub.
